--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -9,7 +9,7 @@
 <h1>Welcome to Hero Squad App!</h1>
 <ul class="nav nav-tabs">
    <li role="presentation" class="active"><a href="#">Home</a></li>
-   <li role="presentation"><a href="/heroes">See All Posts</a></li>
+   <li role="presentation"><a href="/new_heroes">Create new hero</a></li>
    <li role="presentation"><a href="/posts/new">Add a New Post</a></li>
 </ul>
 <h2>Heroes</h2>
