updated the create new hero form

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -9,7 +9,7 @@
 <h1>Welcome to Hero Squad App!</h1>
 <ul class="nav nav-tabs">
    <li role="presentation" class="active"><a href="#">Home</a></li>
-   <li role="presentation"><a href="/new_heroes">Create new hero</a></li>
+   <li role="presentation"><a href="/new_hero">Create new hero</a></li>
    <li role="presentation"><a href="/posts/new">Add a New Post</a></li>
 </ul>
 <h2>Heroes</h2>
@@ -18,7 +18,7 @@
         <li>
             <strong>Name:</strong> {{name}} <br>
             <strong>Age:</strong> {{age}} <br>
-            <strong>Special Power:</strong> {{specialPower}} <br>
+            <strong>Special Power:</strong> {{power}} <br>
             <strong>Weakness:</strong> {{weakness}}
         </li>
     {{/each}}
