update create squad function

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -10,7 +10,7 @@
 <ul class="nav nav-tabs">
    <li role="presentation" class="active"><a href="#">Home</a></li>
    <li role="presentation"><a href="/new_hero">Create new hero</a></li>
-   <li role="presentation"><a href="/posts/new">Add a New Post</a></li>
+   <li role="presentation"><a href="/new_squad">Create new squad</a></li>
 </ul>
 <h2>Heroes</h2>
 <ul>
