--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -6,7 +6,7 @@
     <title>Hero Squad App</title>
 </head>
 <body>
-<h1>Welcome to Hero Squad App!</h1>
+<h1>Our Superhero App!</h1>
 <ul class="nav nav-tabs">
    <li role="presentation" class="active"><a href="#">Home</a></li>
    <li role="presentation"><a href="/new_hero">Create new hero</a></li>
